25/1/12: Goatfold Initial Deployment

--- a/domU/goatfold/goatfold.cfg
+++ b/domU/goatfold/goatfold.cfg
@@ -1,7 +1,9 @@
-type = "hvm"
-name = "Goatfold"
-uuid = "c398023a-df46-43fe-ad5b-60eaaad1a491"
-memory = "8192"
+name = 'Goatfold'
+type = 'hvm'
+device_model_version = 'qemu-xen'
+device_model_override = '/nix/store/gvk5vwd4x5ifa3k4fmwhacyqcavryk24-qemu-xen-9.1.2/bin/qemu-system-i386'
+boot = 'c'
+memory = '8192'
 vcpus = 4
-boot = "cd"
-disk = [ "/xen/images/goatfold.qcow2,qcow2,hda,w", "file:/xen/storage/latest-nixos-minimal-x86_64-linux.iso,hdc:cdrom,r" ]
+vif = [ 'mac=2e:90:d6:0b:ee:d9,bridge=xenbr0' ]
+disk = [ '/xen/images/goatfold.qcow2,qcow2,hda,w' ]
